# TinaKit

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeUserPresets.json  README.md
cmake/: FindSkia.cmake  TargetNameHelper.cmake
common/: CMakeLists.txt
core/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
core/widgets/: Dialog.cpp  Dialog.h  LogMessageBox.cpp  LogMessageBox.h  LogViewer.cpp  LogViewer.h
dependencies/: CMakeLists.txt
docs/: BUILD_OPTIONS.md  README.md  performance_optimizations.md
docs/ai-prompt/: TinaKit统一架构的完美方案.md  tinakit-project-prompt.md
docs/api-reference/: index.md
docs/architecture/: api_design_rationale.md  design-philosophy.md  overview.md
docs/features/: implemented-features.md
docs/getting-started/: hello-world-updated.md  hello-world.md  installation.md
docs/tutorials/: 01-reading-simple-xlsx.md  02-writing-basic-xlsx.md  03-modern-cpp-data-processing.md  04-async-large-files.md  05-advanced-formatting.md
examples/: CMakeLists.txt  README.md  alignment_test.cpp  comprehensive_style_test.cpp  conditional_format_test.cpp  debug_position.cpp  debug_style_test.cpp  debug_xlsx_test.cpp  dream_code.cpp  excel_read_edit_test.cpp  excel_with_styles.cpp  extract_styles.cpp  final_test.cpp  handle_system_test.cpp  main.cpp  performance_benchmark.cpp  performance_comparison.cpp  performance_demo.cpp  simple_style_test.cpp  stream_demo.cpp  style_chain_demo.cpp  style_template_test.cpp  styled_report_demo.cpp  test_shared_strings_and_styles.cpp  tinakit_comprehensive_demo.cpp  unified_performance_test.cpp  workbook_test.cpp  xlsx_archiver_demo.cpp  xlsx_reader_test.cpp
examples/basic/: main.cpp  minizip_direct_test.cpp
examples/excel/: debug_excel_xml.cpp  excel_read_edit_test.cpp  handle_system_test.cpp  style_template_test.cpp  xlsx_archiver_demo.cpp  xlsx_reader_test.cpp
examples/pdf/: basic_pdf_example.cpp  encoding_test.cpp  font_config_demo.cpp  font_debug_test.cpp  font_options_demo.cpp  image_demo.cpp  mixed_text_demo.cpp  quick_fix_test.cpp  simple_test.cpp
include/: MainWindow.hpp
include/tinakit/: tinakit.hpp
include/tinakit/core/: async.hpp  cache_system.hpp  color.hpp  exceptions.hpp  image.hpp  io.hpp  logger.hpp  openxml_archiver.hpp  performance_optimizations.hpp  task.hpp  types.hpp  unicode.hpp  xml_parser.hpp
include/tinakit/excel/: cell.hpp  column.hpp  conditional_format.hpp  formula_engine.hpp  openxml_namespaces.hpp  range.hpp  range_view.hpp  row.hpp  shared_strings.hpp  style.hpp  style_manager.hpp  style_template.hpp  types.hpp  workbook.hpp  worksheet.hpp  worksheet_range.hpp
include/tinakit/excel/io/: io.hpp  xlsx_archiver.hpp  xml_parser.hpp  xmlparser.hpp
include/tinakit/internal/: coordinate_utils.hpp  pdf_document_impl.hpp  workbook_impl.hpp  worksheet_impl.hpp
include/tinakit/pdf/: binary_writer.hpp  document.hpp  style.hpp  types.hpp
include/tinakit/pdf/config/: font_config.hpp
include/tinakit/pdf/core/: font_manager.hpp  font_subset_manager.hpp  object.hpp  page.hpp  serializer.hpp  writer.hpp
include/tinakit/pdf/encoding/: font_encoding.hpp  unicode_support.hpp
include/tinakit/pdf/style/: style_manager.hpp
include/tinakit/pdf/utils/: compression.hpp  debug_tools.hpp
scripts/: create_release.py
src/: CMakeLists.txt  MainWindow.cpp  main.cpp  mainwindow.cpp
src/core/: async.cpp  cache_system.cpp  color.cpp  image.cpp  io.cpp  logger.cpp  openxml_archiver.cpp  performance_optimizations.cpp  types.cpp  unicode.cpp  xml_parser.cpp
src/excel/: cell.cpp  column.cpp  conditional_format.cpp  excel.cpp  formula_engine.cpp  range.cpp  range_view.cpp  row.cpp  shared_strings.cpp  style.cpp  style_manager.cpp  style_template.cpp  types.cpp  workbook.cpp  worksheet.cpp  worksheet_range.cpp
src/excel/io/: io.cpp  xlsx_archiver.cpp  xml_parser.cpp  xmlparser.cpp
src/internal/: coordinate_utils.cpp  pdf_document_impl.cpp  workbook_impl.cpp  worksheet_impl.cpp
src/pdf/: binary_writer.cpp  document.cpp  types.cpp
src/pdf/config/: font_config.cpp
src/pdf/core/: binary_writer.cpp  font_manager.cpp  font_subset_manager.cpp  font_subsetter.cpp  object.cpp  page.cpp  serializer.cpp  writer.cpp
src/pdf/internal/: pdf_document_impl.cpp
src/pdf/utils/: compression.cpp
tests/: CMakeLists.txt  main.cpp  test_advanced_features.cpp  test_conditional_format.cpp  test_coordinate_system.cpp  test_formula_engine.cpp  test_framework.hpp  test_integration.cpp  test_row_system.cpp  test_worksheet_features.cpp
tests/core/: test_logger.cpp
tests/excel/: test_column.cpp  test_fixes.cpp  test_range_advanced.cpp  test_range_system.cpp  test_row_system.cpp
tests/pdf/: test_basic_pdf.cpp
ui/: mainwindow.ui
